--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# editor-config
+.editorconfig
+
+# eslint
+.eslintrc
+.eslintignore
+
+# prettier
+.prettierrc
